// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFound "en" locale renders correctly 1`] = `
.c4.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin: 0;
  font-weight: 400;
}

.c3.c3.c3 {
  line-height: 36px;
  font-weight: 600;
  margin: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 64px;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
}

.c5 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 8px;
  padding: 6px 16px;
  color: #FFFFFFFF;
  background: #0062C9FF;
}

.c5:focus-visible {
  outline: #004A97FF solid 2px;
}

.c5:hover:not(:disabled) {
  cursor: pointer;
  background: #004A97FF;
}

.c5:active:not(:disabled) {
  background: #004A97FF;
}

.c5:disabled {
  cursor: not-allowed;
  color: #686E78FF;
  background-color: #1D24360D;
}

.c5 .anticon,
.c5 .rovna-ui-icon-root {
  font-size: 16px;
}

.c5:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c5:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c5:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c2 {
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c1 {
  position: absolute;
  z-index: 1;
  color: #f7f9fe;
  font-family: 'Museo Sans Cyrl';
  font-size: 531.415px;
  font-style: normal;
  font-weight: 700;
  line-height: 75%;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    404
  </span>
  <div
    className="c2"
  >
    <h3
      className="rovna-ui-typography c3 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-title"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Page not found
    </h3>
    <p
      className="rovna-ui-typography c4 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-paragraph"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Try another link or return to the main page
    </p>
    <button
      className="c5 rovna-ui-button rovna-ui-button-variant-primary rovna-ui-button-preset-default rovna-ui-button-size-medium"
      data-testid="rovna-ui-button"
      disabled={false}
      onClick={[Function]}
    >
      Go main
    </button>
  </div>
</div>
`;

exports[`NotFound "ru" locale renders correctly 1`] = `
.c4.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin: 0;
  font-weight: 400;
}

.c3.c3.c3 {
  line-height: 36px;
  font-weight: 600;
  margin: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 64px;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
}

.c5 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 8px;
  padding: 6px 16px;
  color: #FFFFFFFF;
  background: #0062C9FF;
}

.c5:focus-visible {
  outline: #004A97FF solid 2px;
}

.c5:hover:not(:disabled) {
  cursor: pointer;
  background: #004A97FF;
}

.c5:active:not(:disabled) {
  background: #004A97FF;
}

.c5:disabled {
  cursor: not-allowed;
  color: #686E78FF;
  background-color: #1D24360D;
}

.c5 .anticon,
.c5 .rovna-ui-icon-root {
  font-size: 16px;
}

.c5:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c5:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c5:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c5:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c2 {
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c1 {
  position: absolute;
  z-index: 1;
  color: #f7f9fe;
  font-family: 'Museo Sans Cyrl';
  font-size: 531.415px;
  font-style: normal;
  font-weight: 700;
  line-height: 75%;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    404
  </span>
  <div
    className="c2"
  >
    <h3
      className="rovna-ui-typography c3 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-title"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Страница не найдена
    </h3>
    <p
      className="rovna-ui-typography c4 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-paragraph"
      style={
        {
          "WebkitLineClamp": undefined,
        }
      }
    >
      Попробуйте другую ссылку или вернитесь на главную страницу
    </p>
    <button
      className="c5 rovna-ui-button rovna-ui-button-variant-primary rovna-ui-button-preset-default rovna-ui-button-size-medium"
      data-testid="rovna-ui-button"
      disabled={false}
      onClick={[Function]}
    >
      На главную
    </button>
  </div>
</div>
`;
